--- a/reporteSura.html
+++ b/reporteSura.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="js/main.js">
     <title>Zebra Tradel</title>
 </head>
 
@@ -24,12 +27,28 @@
             <a href="robo">Robo</a>
             <a href="daño">Daño</a>
         </div>
+        <div class="icon contenedor">
+            <a href="siniestro.html"><i class="far fa-hand-point-left"></i></a>
+            <a href="#"><i class="fas fa-search"></i></a>
+        </div>
     </div>
+
     <fieldset class="contenedor seccion-equipo robo">
         <legend>Robo</legend>
+
+
     </fieldset>
     <fieldset class="contenedor seccion-equipo daño">
         <legend>daño</legend>
+        <label for="cReparacion">Costo Reparacion:</label>
+        <input type="text" id="cReparacios" name="cReparacion" value="" placeholder="Costo Reparacion...">
+        <label for="rSura">Reporte Sura:</label>
+        <input type="text" id="rSura" name="rSura" value="" placeholder="Reporte Sura...">
+        <label for="cobrado">Cobrado A:</label>
+        <input type="text" id="cobrado" name="cobrado" value="" placeholder="Cobrado a...">
+        <label for="cMantenimiento">Numero Caso Mantenimiento:</label>
+        <input type="text" id="cMantenimiento" name="cMantenimiento" value="" placeholder="Numero Caso Mantenimiento...">
+
 
     </fieldset>
 
@@ -38,7 +57,7 @@
             <p class="copyright">Todos los Derechos Reservados &copy; </p>
         </div>
     </footer>
-
+    <script src="jquery-1.12.0.min.js"></script>
 </body>
 
 </html>
