--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="js/main.js">
     <title>Zebra Tradel</title>
 </head>
 
@@ -36,7 +37,7 @@
             <p class="copyright">Todos los Derechos Reservados &copy; </p>
         </div>
     </footer>
-
+    <script src="jquery-1.12.0.min.js"></script>
 </body>
 
 </html>
