--- a/reporteSura.html
+++ b/reporteSura.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="js/main.js">
+    <!-- <link rel="stylesheet" href="js/main.js"> -->
     <title>Zebra Tradel</title>
 </head>
 
@@ -57,6 +57,7 @@
         </div>
     </footer>
     <script src="jquery-1.12.0.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
