--- a/equipos.html
+++ b/equipos.html
@@ -20,10 +20,10 @@
     </header>
     <nav class="icono contenedor">
         <a href="index.html"><i class="far fa-hand-point-left"></i></a>
-        <a href="#"><i class="fas fa-print"></i></a>
-        <a href="#"><i class="fas fa-address-book"></i></a>
+        <a href="impresora.html"><i class="fas fa-print"></i></a>
+        <a href="asignacion.html"><i class="fas fa-address-book"></i></a>
         <a href="#"><i class="fas fa-pencil-alt"></i></a>
-        <a href="#"><i class="far fa-file-alt"></i></a>
+        <a href="comodato.html"><i class="far fa-file-alt"></i></a>
         <a href="#"><i class="fas fa-search"></i></a>
     </nav>
     <form action="equipo" class="contenedor">
