--- a/asignacion.html
+++ b/asignacion.html
@@ -16,7 +16,7 @@
     <header class="contenedor">
         <div class="barra contenedor">
             <div class="titulo">
-                <h1>control de Equipos</h1>
+                <h1>control de celularess</h1>
             </div>
         </div>
         <div class="icon contenedor">
